--- a/report.html
+++ b/report.html
@@ -1,6 +1,6 @@
 <html>
-<head>
-<link type="text/css" rel="Stylesheet" href="seng499.css" />
-</head>
-This is the report page
+	<head>
+		<link type="text/css" rel="Stylesheet" href="css/seng499.css" />
+	</head>
+	This is the report page
 </html>
