--- a/seng499.html
+++ b/seng499.html
@@ -1,6 +1,6 @@
 <html>
-<link type="text/css" rel="Stylesheet" href="seng499.css" />
-<a href="index.html">Home</a> 
-<a href="report.html">Report</a>
-<a href="game.html">Demo</a>
+	<link type="text/css" rel="Stylesheet" href="css/seng499.css" />
+	<a href="index.html">Home</a> 
+	<a href="report.html">Report</a>
+	<a href="game.html">Demo</a>
 </html>
